--- a/app/views/products/product.html.erb
+++ b/app/views/products/product.html.erb
@@ -27,9 +27,7 @@
             <div class="col-lg-6">
                 <div class="details_image">
                 <div class="details_image_large" id="focusme" tabindex="-1">
-                        <% if @product.product_picture.attachment != nil %>
-                            <%= image_tag @product.product_picture %>
-                        <% end %>
+                        <%= attachement_or_picture(@product) %>
                         <% if @product.status == "sales" %>
                         <div class="product_extra product_sale"><a href="categories.html">-
                                 <%= @product.discount %>%</a></div>
@@ -78,29 +76,27 @@
 
                     <!-- Product Quantity -->
                     <div class="product_quantity_container">
-                        <div class="product_quantity clearfix">
-                            <span>Qté</span>
-                            <input id="quantity_input" type="text" pattern="[0-9]*" value="1">
-                            <div class="quantity_buttons">
-                                <div id="quantity_inc_button" class="quantity_inc quantity_control"><i class="fa fa-chevron-up"
-                                        aria-hidden="true"></i></div>
-                                <div id="quantity_dec_button" class="quantity_dec quantity_control"><i class="fa fa-chevron-down"
-                                        aria-hidden="true"></i></div>
-                            </div>
+                        <%= form_for(@line_item, url: line_items_path(product_id: @product.id)) do |f| %>
+                        <div class="select_quantity_container_admin">
+                             Quantité <br>
+                            <%= f.number_field(:quantity, step: 1) %>
                         </div>
-                        <div class="button cart_button"><a href="#">Ajouter au panier</a></div>
+                        <div class="newsletter_button trans_200">
+                            <%= f.submit "Ajouter au panier" %>
+                        </div>
+                        <% end %>
                     </div>
 
                     <!-- Share -->
                     <div class="details_share">
                     <!-- Admin part - Edit & Delete -->
                     <% if admin_or_webmaster == true %>
-                    <div class="button cart_button mt-3">
+                    <div class="button cart_button">
                         <span>
                             <%= link_to "Éditer", edit_product_path(@product.id) %>
                         </span>
                     </div>
-                    <div class="button cart_button mt-3">
+                    <div class="button cart_button">
                         <span>
                             <%= link_to 'Supprimer', product_path(@product.id), method: :delete %>
                         </span>
