--- a/app/views/line_items/update.js.erb
+++ b/app/views/line_items/update.js.erb
@@ -1,4 +1,3 @@
-$('#quantity_updated-<%=@line_item.id%>').html('<%= j render "line_items/quantity_updated"%>').fadeIn;
-setTimeout(function(){
-        $('#quantity_updated-<%=@line_item.id%>').fadeOut();
-}, 3000);
+$("#line_item_total_price_<%=@line_item.id%>").html('<%= j render "line_items/price_updated"%>').fadeIn;
+$("#sub_total_price").html('<%= j render "carts/sub_total_price"%>').fadeIn;
+$("#total_price").html('<%= j render "carts/total_price"%>').fadeIn;
