--- a/lib/assets/stylesheets/cart.css
+++ b/lib/assets/stylesheets/cart.css
@@ -426,7 +426,7 @@
 	height: 11px;
 	border-radius: 50%;
 	border: solid 2px #9f9f9f;
-	background: #FFFFFF;
+	background: red;
 	-webkit-transition: all 200ms ease;
 	-moz-transition: all 200ms ease;
 	-ms-transition: all 200ms ease;
