--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -75,13 +75,13 @@
                             </div>
                         </div>
                         <div clas ="row">
-                            <div class="col-xl-6 select_quantity"></div>
+                            <div class="col-xl-6 select_quantity">
                                 <%= f.label :price, "Prix" %>
                                 <div class="select_quantity_container">
                                     <%= f.number_field(:price, min: 0.01..99999999.0, step: 0.01) %>
                                 </div>
                             </div>
-                            <div class="col-xl-6 last_name_col select_quantity"></div>
+                            <div class="col-xl-6 last_name_col select_quantity">
                                 <%= f.label :quantity, "Quantité" %>
                                 <div class="select_quantity_container">
                                     <%= f.number_field(:quantity, step: 1) %>
