cart CSS responsive fixed + changed add_user in after_action

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -54,6 +54,11 @@ option {
     width: 80px;
 }
 
+.select_quantity_container_admin p
+{
+    text-align: left;
+}
+
 // All products
 
 .product_image img{
